[package]
name = "commons"
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "print_style_guide"
path = "bin/print_style_guide.rs"

[lints]
workspace = true

[dependencies]
ascii_table = { version = "4", features = ["color_codes"] }
byte-unit = "4"
const_format = "0.2"
# TODO: Consolidate on either the regex crate or the fancy-regex crate, since this repo currently uses both.
fancy-regex = "0.13"
fs_extra = "1"
fs-err = "2"
fun_run = "0.2"
glob = "0.3"
indoc = "2"
lazy_static = "1"
# libcnb has a much bigger impact on buildpack behaviour than any other dependencies,
# so it's pinned to an exact version to isolate it from lockfile refreshes.
libcnb = "=0.23.0"
libherokubuildpack = { version = "=0.21.0", default-features = false, features = ["command"] }
regex = "1"
serde = "1"
sha2 = "0.10"
tempfile = "3"
thiserror = "1"
walkdir = "2"

[dev-dependencies]
filetime = "0.2"
indoc = "2"
libcnb-test = "=0.21.0"
pretty_assertions = "1"
toml = "0.8"
