[package]
name = "commons"
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
byte-unit = "5"
# TODO: Consolidate on either the regex crate or the fancy-regex crate, since this repo currently uses both.
fancy-regex = "0.14"
fs_extra = "1"
fs-err = "3"
glob = "0.3"
# libcnb has a much bigger impact on buildpack behaviour than any other dependencies,
# so it's pinned to an exact version to isolate it from lockfile refreshes.
libcnb = "=0.26.1"
regex = "1"
serde = "1"
sha2 = "0.10"
tempfile = "3"
thiserror = "2"
walkdir = "2"
filetime = "0.2"
magic_migrate = "1.0.1"
toml = "0.8"
cache_diff = "1.1"

[dev-dependencies]
filetime = "0.2"
toml = "0.8"
bullet_stream = "0.4.0"
