[package]
name = "commons"
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
cache_diff.workspace = true
byte-unit = "5"
# TODO: Consolidate on either the regex crate or the fancy-regex crate, since this repo currently uses both.
fancy-regex = "0.17"
fs_extra = "1"
fs-err.workspace = true
glob = "0.3"
libcnb = "0.30"
regex = "1"
serde = "1"
sha2 = "0.11"
tempfile = "3"
thiserror = "2"
walkdir = "2"
filetime = "0.2"
magic_migrate.workspace = true
toml = "1"

[dev-dependencies]
bullet_stream.workspace = true
filetime = "0.2"
