[package]
name = "heroku-statsd-metrics"
# This crate is not published, so the only version that is used is the one in buildpack.toml.
version = "0.0.0"
publish = false
edition.workspace = true
rust-version.workspace = true

[dependencies]
commons = { path = "../../commons" }
flate2 = "1"
fs-err = "2"
indoc = "2"
libcnb = "0.13"
rand = "0.8"
regex = "1"
serde = "1"
tar = "0.4"
tempfile = "3"
thiserror = "1"
ureq = "2"
url = { version = "2", features = ["serde"] }
glob = "0.3"
cached = "0.44.0"
clap = { version = "4.3.17", features = ["derive"] }
libherokubuildpack.workspace = true
