[package]
name = "heroku-ruby-buildpack"
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
bullet_stream = "0.3.0"
clap = { version = "4", default-features = false, features = ["derive", "error-context", "help", "std", "usage"] }
commons = { path = "../../commons" }
flate2 = { version = "1", default-features = false, features = ["zlib"] }
fs-err = "3"
fun_run = { version = "0.2", features = ["which_problem"] }
glob = "0.3"
indoc = "2"
# libcnb has a much bigger impact on buildpack behaviour than any other dependencies,
# so it's pinned to an exact version to isolate it from lockfile refreshes.
libcnb = "=0.26.1"
libherokubuildpack = { version = "=0.26.1", default-features = false, features = ["digest"] }
rand = "0.8"
# TODO: Consolidate on either the regex crate or the fancy-regex crate, since this repo currently uses both.
regex = "1"
serde = "1"
tar = { version = "0.4", default-features = false }
tempfile = "3"
thiserror = "1"
ureq = { version = "2", default-features = false, features = ["tls"] }
url = "2"
magic_migrate = "0.2"
toml = "0.8"
cache_diff = { version = "1.0.0", features = ["bullet_stream"] }

[dev-dependencies]
libcnb-test = "=0.26.1"
