[package]
name = "heroku-ruby-buildpack"
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
bullet_stream.workspace = true
fun_run.workspace = true
cache_diff.workspace = true
clap = { version = "4", default-features = false, features = ["derive", "error-context", "help", "std", "usage"] }
commons = { path = "../../commons" }
flate2 = { version = "1", default-features = false, features = ["zlib"] }
fs-err = "3"
glob = "0.3"
indoc = "2"
# libcnb has a much bigger impact on buildpack behaviour than any other dependencies,
# so it's pinned to an exact version to isolate it from lockfile refreshes.
libcnb = "=0.26.1"
libherokubuildpack = { version = "=0.26.1", default-features = false, features = ["digest"] }
rand = "0.9"
# TODO: Consolidate on either the regex crate or the fancy-regex crate, since this repo currently uses both.
regex = "1"
serde = "1"
tar = { version = "0.4", default-features = false }
tempfile = "3"
thiserror = "2"
ureq = { version = "2", default-features = false, features = ["tls"] }
url = "2"
magic_migrate = "1.0"
toml = "0.8"

[dev-dependencies]
libcnb-test = "=0.26.1"
pretty_assertions = "1.4.1"
