[package]
name = "heroku-ruby-buildpack"
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
bullet_stream.workspace = true
fun_run.workspace = true
cache_diff.workspace = true
commons = { path = "../../commons" }
flate2 = { version = "1", default-features = false, features = ["zlib"] }
fs-err = "3"
glob = "0.3"
indoc = "2"
# libcnb has a much bigger impact on buildpack behaviour than any other dependencies,
# so it's pinned to an exact version to isolate it from lockfile refreshes.
libcnb = { version = "=0.29.1", features = ["trace"] }
libherokubuildpack = { version = "=0.30.2", default-features = false, features = [
    "digest",
    "download",
] }
rand = "0.9"
# TODO: Consolidate on either the regex crate or the fancy-regex crate, since this repo currently uses both.
regex = "1"
serde = "1"
tar = { version = "0.4", default-features = false }
tempfile = "3"
thiserror = "2"
ureq = { version = "2", default-features = false, features = ["tls"] }
url = "2"
magic_migrate.workspace = true
toml = "0.9"
tracing = "0.1"

[dev-dependencies]
libcnb-test = "=0.29.1"
pretty_assertions = "1.4.1"
